--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "6.3.0"
+    "version": "7.3.0"
   },
   "dependencies": {
     "@traptitech/markdown-it-katex": "^3.6.0",
+    "css": "^3.0.0",
     "hexo": "^7.3.0",
     "hexo-deployer-git": "^4.0.0",
     "hexo-filter-mathjax": "^0.9.0",
